--- a/contract/Cargo.toml
+++ b/contract/Cargo.toml
@@ -33,18 +33,18 @@ optimize = """docker run --rm -v "$(pwd)":/code \
 
 [dependencies]
 chrono = "0.4.40"
-cosmwasm-schema = "2.2.2"
-cosmwasm-std = { version = "2.2.2", features = [
+cosmwasm-schema = "1.5.11"
+cosmwasm-std = { version = "1.5.11", features = [
   # Enable this if you only deploy to chains that have CosmWasm 2.0 or higher
   # "cosmwasm_2_0",
   # Or this if you only deploy to chains that have CosmWasm 2.1 or higher
-  "cosmwasm_2_1",
+  # "cosmwasm_2_1",
 ] }
-cw-storage-plus = "2.0.0"
-cw2 = "2.0.0"
+cw-storage-plus = "1.2.0"
+cw2 = "1.1.2"
 schemars = "0.8.16"
 serde = { version = "1.0.197", default-features = false, features = ["derive"] }
 thiserror = { version = "2.0.12" }
 
 [dev-dependencies]
-cw-multi-test = "2.0.0"
+cw-multi-test = "1.2.0"
