--- a/ui/package.json
+++ b/ui/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@cosmjs/amino": "^0.33.1",
+    "@cosmjs/cosmwasm-stargate": "^0.33.1",
+    "@cosmjs/proto-signing": "^0.33.1",
     "@hookform/resolvers": "^4.1.3",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
@@ -19,6 +22,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.483.0",
+    "moment": "^2.30.1",
     "next": "15.2.3",
     "next-themes": "^0.4.6",
     "postcss": "^8.5.3",
